--- a/01-html-css/style2.css
+++ b/01-html-css/style2.css
@@ -1,10 +1,3 @@
-/* html {
-    font-size: 500%; /* 62.5% of 16px = 10px */
-    
-
-/*    } */
-
-
 body {
     display: flex;
     justify-content: center;
@@ -16,7 +9,6 @@ h1 {
     font-size: 1.5rem;
 }
 
-
 .todos {
     margin: 0;
 	padding: 0;
@@ -24,38 +16,32 @@ h1 {
 
 .new-todo {
     width: 100%;
+    padding: 1rem;
+    box-sizing: border-box;
+    border: 1px solid black;
 }
 
-.todos li .toggle {
-	text-align: center;
-	width: 40px;
-	/* auto, since non-WebKit browsers doesn't support input styling */
-	height: auto;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	margin: auto 0;
-	border: none; /* Mobile Safari */
-	-webkit-appearance: none;
-	appearance: none;
-}
-
-.todos li .toggle {
-	opacity: 0;
-}
-
-ul {
+.todo-list {
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-.new-todo {
-    padding: 16px 16px 16px 16px;
-    border: 1px solid black;
+.todo-list .toggle {
+	text-align: center;
+	width: 2rem;
+	height: auto;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	margin: auto 0;
+	border: none; 
+	-webkit-appearance: none;
+	appearance: none;
+    opacity: 0;
 }
 
-.todos li label {
+.todo-list label {
 	word-break: break-all;
 	padding: 15px 15px 15px 60px;
 	display: block;
@@ -64,18 +50,24 @@ ul {
 }
 
 
-.todos li .toggle + label {
+.todo-list .toggle + label {
 	background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23ededed%22%20stroke-width%3D%223%22/%3E%3C/svg%3E');
 	background-repeat: no-repeat;
 	background-position: center left;
 }
 
-.todos li .toggle:checked + label {
+.todo-list .toggle:checked + label {
 	background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
 }
 
-.todos li {
+.todo-list li {
 	position: relative;
 	font-size: 1rem;
 	border-bottom: 1px solid #ededed;
+}
+
+.todo-list li:last-child {
+	position: relative;
+	font-size: 1rem;
+	border-bottom: none;
 }
